...
      body: Padding(
        padding: const EdgeInsets.all(8.0),
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            TextFormField(
              key: Key('loginInput'),
              decoration: InputDecoration(
                hintText: 'Утасны дугаар',
              ),
              initialValue: state.phoneNumber.value,
              onChanged: (text) {
                controller.phoneNumber = text;
...
              return state.isLoading.value ? MyLoadingDialogBody() : SizedBox();
            }),
            Obx(() {
              bool _isValidPhoneNumber = MezornCommon.isValidPhoneNumber(state.phoneNumber.value);

              return ElevatedButton(
                key: Key('loginButton'),
                onPressed: _isValidPhoneNumber
                    ? () async {
                        BaseResponse _response = await controller.getOtp();
                        if (_response.success) {
                          Get.toNamed('/verify');
                        } else {
...
